Tailscale VPN Node:  - chooseHostName improvements